# SeguimientoRegalias

./: .gitignore  AjustesReporte.md  CLAUDE.md  app.py  constants.py  data.py  data_igpr.py  export.py  igpr.py  mapa.py  pyproject.toml  render.py  requirements.txt  sync_test.txt
.claude/: settings.local.json
Contexto/: IGPR.ipynb  MatrizSeguimientoEvaluacion_20260526_0435.xlsx  MatrizSeguimientoEvaluacion_20260609_1833.xlsx  ReporteRegaliasHitos.ipynb  Sucre.geojson
contexto/: MatrizSeguimientoEvaluacion_20260422_1317.xlsx
regalias/: Sucre.geojson  __init__.py  constants.py  data.py  data_igpr.py  export.py  igpr.py  mapa.py  render.py
