[project]
name = "seguimiento-regalias"
version = "0.1.0"
description = "App de Streamlit que visualiza el avance de proyectos de regalías del Departamento de Sucre (hitos de gestión, mapa e IGPR)."
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.39.0",
    "polars>=1.20.0,<2.0",
    "pandas>=2.2.0,<3.0",
    "openpyxl>=3.1.5",
    "fastexcel>=0.12.0",
]

[tool.uv]
package = false
